# PolyGraph

./: .editorconfig  .gitattributes  .gitignore  CLAUDE.md  Contributing.md  README.md  citation.cff  mypy_tests_output.txt  pyproject.toml
.claude/: settings.local.json
docs/: IMPLEMENTATION_ROADMAP.md
docs/architecture/: dart_map.md  permutation.md  skeleton_with_notional_methods.md  traversal.md
docs/source/: API.rst  conf.py
docs/source/modules/: polygraph.generators.johnson.rst  polygraph.generators.platonic.rst  polygraph.generators.prisms.rst  polygraph.generators.rst
docs/source/notebooks/: try_pandera.ipynb
docs/source/phase1/: index.rst  johnson_subset.rst  platonic_solids.rst  prism_and_antiprism.rst
src/polygraph/: __init__.py
src/polygraph/algorithms/symmetry/: __init__.py  automorphisms.py  classify.py  orbits.py  point_groups.py
src/polygraph/algorithms/triangulation/: __init__.py  augment.py  validation.py
src/polygraph/generators/: __init__.py  archimedean.py  catalan.py  johnson.py  notation.py  platonic.py  prisms.py
src/polygraph/interop/: bliss_adapter.py  pynauty_adapter.py
src/polygraph/structures/: __init__.py  dart_map.py  dual.py  permutation.py  traversal.py
tests/: conftest.py
tests/algorithms/: test_point_groups.py  test_symmetry.py  test_symmetry_classify.py  test_triangulation.py
tests/generators/: test_johnson.py  test_notation.py  test_platonic.py  test_prisms.py
tests/structures/: test_dual.py  test_traversal.py
